Fixed step description visibility

--- a/src/pages/itinerary-step/itinerary-step.scss
+++ b/src/pages/itinerary-step/itinerary-step.scss
@@ -31,9 +31,9 @@ page-itinerary-step {
     div.description {
       position: absolute;
       left: 105px;
-      top: 15px;
-      bottom: 40px;
-      overflow: hidden;
+      top: 30px;
+      bottom: 50px;
+      overflow: scroll;
     }
 
     div.buttonsBox {
